--- a/.env.dev
+++ b/.env.dev
@@ -6,3 +6,6 @@ DATABASE_URL=
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 MAILER_DSN=null://null
+
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
