--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -22,6 +22,10 @@ when@dev:
                 type: console
                 process_psr_3_messages: false
                 channels: ["!event", "!doctrine", "!console"]
+            telegram:
+                type: service
+                id: App\Logger\TelegramLogHandler
+                level: error  # Будут отправляться ошибки и выше (error, critical, alert, emergency)
 
 when@test:
     monolog:
